# OpenPaw

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
agent_workspaces/.example/: AGENT.md  HEARTBEAT.md  SOUL.md  USER.md  agent.yaml
agent_workspaces/.example/crons/: example.yaml
agent_workspaces/gilfoyle/: AGENT.md  HEARTBEAT.md  SOUL.md  USER.md
docs/: architecture.md  builtins.md  channels.md  concepts.md  configuration.md  cron-scheduler.md  getting-started.md  index.md  queue-system.md  scheduling.md  workspaces.md
docs/assets/diagrams/: approval-gate.mmd  component-dependencies.mmd  config-merging.mmd  heartbeat-decision.mmd  message-flow.mmd  processor-pipeline.mmd  queue-modes.mmd  subagent-flow.mmd  system-overview.mmd  workspace-structure.mmd
example_agent_workspace/: AGENT.md  HEARTBEAT.md  README.md  USER.md  agent.yaml
example_agent_workspace/crons/: daily-checkin.yaml
example_agent_workspace/skills/: .gitkeep
example_agent_workspaces/assistant/: HEARTBEAT.md  README.md  SOUL.md  USER.md  agent.yaml
example_agent_workspaces/assistant/crons/: daily-checkin.yaml
example_agent_workspaces/research_assistant_krieger/: .env.example  AGENT.md  HEARTBEAT.md  README.md  SOUL.md  USER.md  agent.yaml
example_agent_workspaces/research_assistant_krieger/tools/: describe_image.py  markdown_to_pdf.py  mermaid.py  pdf_styles.css  requirements.txt  research.py
openpaw/: __init__.py  cli.py  cli_init.py  main.py  orchestrator.py
openpaw/agent/: __init__.py  metrics.py  runner.py  session_logger.py
openpaw/agent/middleware/: __init__.py  approval.py  llm_hooks.py  queue_aware.py  tool_timeout.py
openpaw/agent/tools/: __init__.py  filesystem.py  sandbox.py
openpaw/api/: __init__.py  app.py  dependencies.py
openpaw/api/routes/: __init__.py  builtins.py  channels.py  crons.py  monitoring.py  settings.py  workspaces.py
openpaw/api/schemas/: __init__.py  builtins.py  channels.py  crons.py  monitoring.py  settings.py  workspaces.py
openpaw/api/services/: __init__.py  builtin_service.py  channel_service.py  cron_service.py  encryption.py  migration_service.py  monitoring_service.py  settings_service.py  workspace_service.py
openpaw/approval/: __init__.py  config.py  manager.py  middleware.py
openpaw/builtins/: __init__.py  base.py  loader.py  registry.py
openpaw/builtins/processors/: __init__.py  docling.py  file_persistence.py  timestamp.py  whisper.py
openpaw/builtins/tools/: __init__.py  _audio_context.py  _channel_context.py  brave_search.py  channel_history.py  cron.py  elevenlabs_tts.py  followup.py  md2pdf.py  md2pdf_themes.py  memory_search.py  plan.py  send_file.py  send_message.py  shell.py  spawn.py  ssh.py  task.py
openpaw/channels/: __init__.py  base.py  discord.py  factory.py  formatting.py  telegram.py
openpaw/channels/commands/: base.py  router.py
openpaw/commands/: __init__.py  base.py  router.py
openpaw/commands/handlers/: __init__.py  compact.py  help.py  new.py  queue_mode.py  start.py  status.py
openpaw/core/: __init__.py  agent.py  channel_context.py  config.py  logging.py  metrics.py  paths.py  timezone.py  tool_middleware.py  utils.py  workspace.py
openpaw/core/config/: __init__.py  approval.py  loader.py  models.py  providers.py
openpaw/core/prompts/: __init__.py  commands.py  framework.py  heartbeat.py  system_events.py
openpaw/core/queue/: __init__.py  manager.py
openpaw/cron/: __init__.py  dynamic.py  loader.py  scheduler.py
openpaw/db/: __init__.py  database.py  models.py
openpaw/db/repositories/: __init__.py  base.py  (+6 more)
openpaw/domain/: __init__.py  cron.py  message.py  session.py  subagent.py  task.py
openpaw/heartbeat/: __init__.py  scheduler.py
openpaw/llm/: __init__.py  middleware.py
openpaw/memory/: __init__.py  archiver.py
openpaw/model/: __init__.py  channel.py  cron.py  message.py  subagent.py
openpaw/prompts/: __init__.py  framework.py  processors.py
openpaw/queue/: __init__.py  lane.py  manager.py
openpaw/runtime/: __init__.py  channel_logger.py  orchestrator.py
openpaw/session/: __init__.py  manager.py
openpaw/stores/: __init__.py  approval.py  cron.py  subagent.py  task.py
openpaw/subagent/: __init__.py  runner.py  store.py
openpaw/task/: __init__.py  store.py
openpaw/tools/: filesystem.py
openpaw/utils/: __init__.py  filename.py
openpaw/workspace/: __init__.py  agent_factory.py  lifecycle.py  loader.py  message_processor.py  migration.py  runner.py  tool_loader.py
scripts/: caldav_diagnostic_report.md  debug_joan_calendar.py  debug_joan_calendar_simple.py  diagnose_caldav.py  inspect_langchain_message.py  interrupt_deep_dive.py  interrupt_exception_test.py  langgraph_spike.py  openpaw.sh  test_kimi_end_to_end.py  test_kimi_k2.5.py  test_markdown_to_pdf.py  validate_contextvar_refactor.py
tests/: __init__.py  test_agent_metrics_integration.py  test_agent_thinking_tokens.py  test_api.py  test_approval_config.py  test_approval_gates.py  test_audio_context.py  test_auto_compact.py  test_browser_builtin.py  test_browser_integration.py  test_browser_security.py  test_browser_session.py  test_browser_snapshot.py  test_builtin_loader.py  test_builtin_loader_integration.py  test_builtin_prerequisite.py  test_builtin_routes.py  test_builtin_service.py  test_channel_adapter_history.py  test_channel_context.py  test_channel_context_formatter.py  test_channel_factory.py  test_channel_history_foundation.py  test_channel_history_tool.py  test_channel_logger.py  test_channel_routes.py  test_channel_send_file.py  test_check_unexpanded_vars.py  test_cli_error_handling.py  test_cli_init.py  test_command_handlers.py  test_command_router.py  test_context_info.py  test_context_injection.py  test_conversation_archiver.py  test_conversation_indexer.py  test_cron_dynamic.py  test_cron_routes.py  test_cron_timezone.py  test_cron_tool_timezone.py  (+79 more)
tests/channels/: conftest.py  test_discord.py  test_trigger_filtering.py
tests/tools/: test_describe_image.py
(+31 files in other folders)
